fix spacing and navigation

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,13 @@ article {
     flex-direction: column;
 }
 
+/** Anchor Links **/
+
+:target {
+    scroll-margin-top: 24px;
+}
+
+
 @layer utilities {
     .text-balance {
         text-wrap: balance;
